--- a/site/index.html
+++ b/site/index.html
@@ -20,12 +20,12 @@
                 <p>Каким бы не был ваш опыт в разработке сайтов, вы сможете подобрать курс в нашей школе.</p>
             </header>
             <section>
-                <h2>Разработчик сайтов с нуля - $500</h2>>
+                <h2>Разработчик сайтов с нуля - <del>$500</del> $400</h2>>
                 <p>разработка сайтов для новичков, это не всегда просто, но с опытом приходит и опыт, и с развитием навыков приходят заказчики, с которыми работать одно удовольствие, главное не бояться, не стесняться спрашивать - что ты можешь, а что нет, если стесняешься задавать вопросы на собеседовании, то спрашивай перед собеседованием.</p>
                 <p>Как по мне, <strong>чем больше опыта</strong>, тем лучше, когда ты уже уверен в себе, ты можешь и знаешь как отвечать и что говорить, тебе не нужно заискивать перед заказчиком, тебе проще, и заказчик больше склонен верить.</p> <!-- Текст сгенерирован в https://yandex.ru/lab/yalm -->
             </section>
             <section>
-                <h2>Разработчик сайтов продвинутого уровня - $1000</h2>>
+                <h2>Разработчик сайтов продвинутого уровня - <del>$1000</del> $800</h2>>
                 <p>В основе работы с клиентом лежит принцип доверия, и если это доверие не оправдывается, то в первую очередь виноват клиент, поскольку он сам не доверяет нам как своим партнерам и сотрудникам, а наши сотрудники - не умеют работать с таким клиентом.</p>
                 <p>К сожалению, в настоящее время, по сути, мы имеем дело с двумя типами заказчиков: одни – это действительно продвинутый клиент, второй – средний клиент, который не хочет учиться и развиваться, но за который мы должны брать деньги.</p> <!-- Текст сгенерирован в https://yandex.ru/lab/yalm -->
             </section>
