--- a/site/pages/about.html
+++ b/site/pages/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <title>Кто мы такие, и как учимся разрабатывать сайты с нуля | О нас</title>
