add h2 for contacts page

--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -16,6 +16,7 @@
         <article>
             <h1>Как нас найти</h1>
             <section>
+                <h2>Заголовок секции</h2>
                 <p>мы рады видеть вас в числе наших клиентов и партнеров. Спасибо, что проявили интерес к нам! Мы обязательно рассмотрим ваше резюме и пригласим Вас на встречу в наш уютный офис, где вы сможете узнать больше об условиях сотрудничества и задать все интересующие вас вопросы.</p>
                 <p>Желаем удачи в поиске подходящей вакансии! ... Подробнее мы рады видеть в числе своих клиентов и партнёров. В связи с расширением, в наш дружный коллектив требуется менеджер по продажам.</p>
             </section>
